<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.cashmanager.ui.CurrencyTransferViewModel"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.28" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.76" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.39" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".52" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.62" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.87" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.83" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".92" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            style="@style/Widget.Astr.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/cm_back_icon"
                app:title="@string/cm_app_name" />
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="136dp"
            android:layout_height="56dp"
            android:gravity="center_horizontal|top"
            android:text="@string/cm_address_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline19"
            app:layout_constraintVertical_bias="0.294" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountToSend_textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="416dp"
            android:autofillHints="false"
            android:hint="@string/cm_amount_hint"
            app:endIconDrawable="@drawable/cm_compare_icon"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountToSend_value"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:onTextChanged="@{viewModel::setAmount}"
                android:text="@{viewModel.amount}" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:gravity="right|center_vertical"
                android:text="@string/cm_text_view_asset_receive"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/asset_transaction"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:hint="@string/cm_asset_hint">

                <AutoCompleteTextView
                    android:id="@+id/assetText_transaction"
                    android:layout_width="239dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:onTextChanged="@{viewModel::setAsset}"
                    android:text="@{viewModel.asset}" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    app:srcCompat="@drawable/striped_square" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cm_transaction_copy_btn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="10dp"
                android:layout_height="37dp"
                android:visibility="invisible"
                app:cornerRadius="4dp"
                app:icon="@drawable/cm_copy_icon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cm_transaction_download_btn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:cornerRadius="4dp"
                app:icon="@drawable/ic_download" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cm_transaction_share_btn"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="36dp"
                android:layout_height="33dp"
                android:visibility="invisible"
                app:cornerRadius="4dp"
                app:icon="@drawable/cm_share_icon" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/qrGenerateBtn"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:text="Aceptar e imprime recibo"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline21"
            app:layout_constraintVertical_bias="0.738" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>